Fix #24 (#25)
